# MScCode

./: CMakeLists.txt  DysonSchwinger.cpp  DysonSchwinger.h  DysonSchwinger_renormalized.cpp  DysonSchwinger_renormalized.h  Dyson_test.cpp  Dyson_test.h  Dyson_test_2.cpp  Dyson_test_2_motherang.cpp  bse_root.cpp  definitions.h  gauleg.cpp  help_header.h  help_numerics.cpp  help_numerics.h  lookuptable.cpp  lookuptable.h  main  main.cpp  main_test.cpp  plot.py  vectorplot.py
